--- a/SEA_Application/Views/Sales/Summary.cshtml
+++ b/SEA_Application/Views/Sales/Summary.cshtml
@@ -34,6 +34,9 @@ else if (User.IsInRole("Cashier"))
 <link rel="stylesheet" href="https://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
 <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 
+<link href="~/Content/print-receipt-thermal-printer-master/print-receipt-thermal-printer-master/style.css" media="screen" rel="stylesheet" />
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
+
 <div class="card">
     <div class="card-body p-4">
 
@@ -57,6 +60,7 @@ else if (User.IsInRole("Cashier"))
 
 
 
+
             <div class="pull-right">
                 <button id="PrintNotes" class="btn btn-primary btn-sm" style="font-size:14px;">Print</button>
 
@@ -65,7 +69,24 @@ else if (User.IsInRole("Cashier"))
 
         </div>
 
+
         <br />
+        <br />
+        <br />
+
+
+        <div class="form-group">
+
+            <label>Select Customer</label>
+
+            <select style="width:200px;" class="form-control drop" id="CustomerDD" name="CustomerDD" >
+                        
+            </select>
+
+
+
+        </div>
+
         <div class="table-responsive" id="DivToPrint">
 
             <h2 style="text-align: center; color: #053f89">Product Order Summary</h2>
@@ -81,6 +102,7 @@ else if (User.IsInRole("Cashier"))
                     <tr>
                         <th>Date</th>
                         <th>Order No </th>
+                        <th>Customer</th>
                         <th>Status </th>
                         <th>Total</th>
                         <th>Discount</th>
@@ -101,9 +123,16 @@ else if (User.IsInRole("Cashier"))
 </div>
 
 <script>
+    var FromDateGlobal = "";
+    var ToDateGlobal = "";
+
     $(document).ready(function () {
 
         $("#PageHeader").html("Summary");
+
+        $(".drop").select2();
+
+
 
 
         var GetDate = new Date();
@@ -115,15 +144,53 @@ else if (User.IsInRole("Cashier"))
 
         var FulldateInString = GetDate.getDate() + "-" + GetMonthName((GetDate.getMonth() + 1)) + "-" + GetDate.getFullYear();
 
-
+        FromDateGlobal = FullDateInYYYYMMDD;
+        ToDateGlobal = FullDateInYYYYMMDD;
 
         $("#DateToView").html('<h3><span id="FromDateView"> Summary From: ' + FulldateInString + ' </span><span> to</span> <span id="ToDateView">' + FulldateInString + ' </span></h3>');
+
+
+
+
+        $.ajax({
+            type: "POST",
+            cache: false,
+            url: "/Sales/GetCustomerList",
+            processData: false,
+            contentType: false,
+            success: function (data) {
+                var sch = JSON.parse(data);
+                console.log(sch);
+
+
+                var $el = $("#CustomerDD");
+                $el.empty();
+                if (sch.length > 0) {
+                    $el.append($("<option></option>")
+                        .attr("value", "All").text('All'));
+
+                    for (i = 0; i < sch.length; i++) {
+
+
+
+                        $el.append($("<option></option>")
+                            .attr("value", sch[i]).text(sch[i]));
+
+
+                    }
+                }
+                else {
+                    $el.append($("<option></option>")
+                        .attr("value", '').text('Select Customer'));
+                }
+            }
+        });//end of ajax
 
 
         $.ajax({
             type: "POST",
             url: "/Sales/GetSaleSummary",
-            data: { "FromDate": FullDateInYYYYMMDD, "ToDate": FullDateInYYYYMMDD },
+            data: { "FromDate": FullDateInYYYYMMDD, "ToDate": FullDateInYYYYMMDD, "CustomerName" : "All"  },
 
             success: function (data) {
 
@@ -149,13 +216,13 @@ else if (User.IsInRole("Cashier"))
                     DiscountTotal = DiscountTotal + data[index].Discount;
                     GrandTotalDiscounted = GrandTotalDiscounted + data[index].DiscountedPrice;
 
-                    $("#SaleReport").append("<tr> <td >" + dat + "</td><td>" + data[index].OrderNo + "</td><td>" + data[index].Status + "</td><td>" + data[index].Total + "</td><td>-" + data[index].Discount + "</td><td>" + data[index].DiscountedPrice + "</td> <td class='detailscolumn'><center> <input onclick='OrderDetails(" + data[index].Id + ")' type='button' style='font-size:12px;' class='btn btn-primary  white' value='Details' id='" + data[index].Id + "' ></center></td></tr>");
+                    $("#SaleReport").append("<tr> <td >" + dat + "</td><td>" + data[index].OrderNo + "</td> <td>" + data[index].CustomerName + "</td><td>" + data[index].Status + "</td><td>" + data[index].Total + "</td><td>-" + data[index].Discount + "</td><td>" + data[index].DiscountedPrice + "</td> <td class='detailscolumn'><center> <input onclick='OrderDetails(" + data[index].Id + ")' type='button' style='font-size:12px;' class='btn btn-primary  white' value='Details' id='" + data[index].Id + "' ></center></td></tr>");
 
                 })
 
-                $("#SaleReport").append("<tr> <td >Grand Total</td><td></td>   <td></td> <td>" + GrandTotal + "</td><td>-" + DiscountTotal + "</td><td>" + GrandTotalDiscounted + "</td></tr>")
+                $("#SaleReport").append("<tr> <td >Grand Total</td><td></td>  <td></td>  <td></td> <td>" + GrandTotal + "</td><td>-" + DiscountTotal + "</td><td>" + GrandTotalDiscounted + "</td></tr>")
 
-                var AllTds = $("td:nth-child(4),td:nth-child(5),td:nth-child(6)");
+                var AllTds = $("td:nth-child(5),td:nth-child(6),td:nth-child(7)");
 
                 for (var i = 0; i < AllTds.length; i++) {
 
@@ -169,6 +236,14 @@ else if (User.IsInRole("Cashier"))
         })
 
 
+        $("#CustomerDD").change(function () {
+
+          var  CustomerName =   $(this).val();
+
+            SaleSummary(FromDateGlobal, ToDateGlobal, CustomerName )
+
+
+        })
 
 
         $('#FromDate').datepicker({
@@ -231,8 +306,11 @@ else if (User.IsInRole("Cashier"))
 
                 $("#DateToView").html('<h3><span id="FromDateView"> Summary From: ' + FromDateFormat + ' </span><span> to</span> <span id="ToDateView">' + ToDateFormat + ' </span></h3>');
 
+                FromDateGlobal = FromDate;
+                ToDateGlobal = ToDate;
 
-                SaleSummary(FromDate, ToDate);
+              var CustomerValue =   $("#CustomerDD").val();
+                SaleSummary(FromDate, ToDate, CustomerValue);
 
 
 
@@ -268,7 +346,14 @@ else if (User.IsInRole("Cashier"))
 
                 $("#DateToView").html('<h3><span id="FromDateView">Summary From: ' + FromDateFormat + ' </span> <span> to</span> <span id="ToDateView">' + ToDateFormat + ' </span></h3>');
 
-                SaleSummary(FromDate, ToDate);
+
+                FromDateGlobal = FromDate;
+                ToDateGlobal = ToDate;
+
+                var CustomerValue = $("#CustomerDD").val();
+
+
+                SaleSummary(FromDate, ToDate, CustomerValue);
 
             }
 
@@ -287,10 +372,11 @@ else if (User.IsInRole("Cashier"))
 
         })//print notes
 
-    })
+    }) //end of document ready 
 
 
-    function SaleSummary(FromDate, ToDate) {
+
+    function SaleSummary(FromDate, ToDate, CustomerName) {
 
         //   alert(FromDate + " " + ToDate);
 
@@ -300,7 +386,7 @@ else if (User.IsInRole("Cashier"))
         $.ajax({
             type: "POST",
             url: "/Sales/GetSaleSummary",
-            data: { "FromDate": FromDate, "ToDate": ToDate },
+            data: { "FromDate": FromDate, "ToDate": ToDate, "CustomerName": CustomerName },
 
             success: function (data) {
 
@@ -326,15 +412,15 @@ else if (User.IsInRole("Cashier"))
                     DiscountTotal = DiscountTotal + data[index].Discount;
                     GrandTotalDiscounted = GrandTotalDiscounted + data[index].DiscountedPrice;
 
-                    $("#SaleReport").append("<tr> <td >" + dat + "</td><td>" + data[index].OrderNo + "</td><td>" + data[index].Status + "</td><td>" + data[index].Total + "</td><td>" + data[index].Discount + "</td><td>" + data[index].DiscountedPrice + "</td> <td class='detailscolumn'><center> <input onclick='OrderDetails(" + data[index].Id + ")' type='button' style='font-size:12px;' class='btn btn-primary  white' value='Details' id='" + data[index].Id + "' ></center></td></tr>");
+                    $("#SaleReport").append("<tr> <td >" + dat + "</td><td>" + data[index].OrderNo + "</td><td>" + data[index].CustomerName + "</td><td>" + data[index].Status + "</td><td>" + data[index].Total + "</td><td>" + data[index].Discount + "</td><td>" + data[index].DiscountedPrice + "</td> <td class='detailscolumn'><center> <input onclick='OrderDetails(" + data[index].Id + ")' type='button' style='font-size:12px;' class='btn btn-primary  white' value='Details' id='" + data[index].Id + "' ></center></td></tr>");
 
                 })
 
-                $("#SaleReport").append("<tr> <td >Grand Total</td> <td></td>  <td></td> <td>" + GrandTotal + "</td><td>" + DiscountTotal + "</td><td>" + GrandTotalDiscounted + "</td></tr>")
+                $("#SaleReport").append("<tr> <td >Grand Total</td> <td></td><td></td>   <td></td> <td>" + GrandTotal + "</td><td>" + DiscountTotal + "</td><td>" + GrandTotalDiscounted + "</td></tr>")
 
 
 
-                var AllTds = $("td:nth-child(4),td:nth-child(5),td:nth-child(6)");
+                var AllTds = $("td:nth-child(5),td:nth-child(6),td:nth-child(7)");
 
                 for (var i = 0; i < AllTds.length; i++) {
 
@@ -365,3 +451,4 @@ else if (User.IsInRole("Cashier"))
         return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
     }
 </script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
