--- a/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
@@ -279,6 +279,15 @@
                     </li>
 
 
+                    <li id="NotesStock" class="nav-item">
+
+                        <a href="@Url.Action("NotesStockIndex", "AspNetNotes" )" class="nav-link nav-toggle">
+                            <i class="fal fa-box"></i>
+                            <p>Notes Stock</p>
+                        </a>
+                    </li>
+
+
                     <li id="Notes" class="nav-item">
 
                         <a href="@Url.Action("Index", "AspNetNotes" )" class="nav-link nav-toggle">
